add wedding api
