# routes/wedding.js
@@ -2,21 +2,21 @@ import express from 'express';
 import { upload, videoUpload, imageUpload } from '../middleware/multer.js';
 import {
 	getGalleryImages,
-	getMomentVideos,
-	uploadMultipleMoments,
+	getWeddingVideos,
+	uploadMultipleWeddings,
 	uploadImage,
-	getMoments,
+	getWeddings,
 	uploadVideo,
 	uploadMultipleImages,
 	deleteImages,
-} from '../controllers/moment.js';
+} from '../controllers/wedding.js';
 import { requireAuth, verifyPermission } from '../middleware/requireAuth.js';
 
 const router = express.Router();
 
-router.get('/', getMoments);
+router.get('/', getWeddings);
 router.get('/gallery', getGalleryImages);
-router.get('/videos', getMomentVideos);
+router.get('/videos', getWeddingVideos);
 router.post('/upload-image', upload.single('image'), uploadImage);
 router.post(
 	'/upload-images',
@@ -24,7 +24,7 @@ router.post(
 	uploadMultipleImages
 );
 router.post('/upload-video', videoUpload.single('video'), uploadVideo);
-router.post('/uploads', upload.array('files'), uploadMultipleMoments);
-router.delete('/', requireAuth, verifyPermission(['ADMIN']), deleteImages);
+router.post('/uploads', upload.array('files'), uploadMultipleWeddings);
+router.delete('/', requireAuth, verifyPermission(["ADMIN"]), deleteImages);
 
 export default router;
