# swagger.yaml
@@ -166,7 +166,7 @@ paths:
                   success:
                     type: boolean
                     example: true
-
+  
   /moments/gallery:
     get:
       tags:
@@ -648,6 +648,265 @@ paths:
                   message:
                     type: string
                     example: Multiple moment uploaded successfully
+  /weddings:
+    get:
+      tags:
+        - 🔄 General
+      summary: Get wedding images
+      description: >-
+        The API endpoint retrieves all wedding images.
+      operationId: getallweddingImages
+      parameters:
+        - name: search
+          in: query
+          description: Search by caption.
+          schema:
+            type: string
+            example: Hello
+        - name: date
+          in: query
+          description: Search by date.
+          schema:
+            type: string
+            example: 2025-07-24
+        - name: type
+          in: query
+          description: Search type.
+          schema:
+            type: string
+            enum: ['image', 'video']
+            example: image
+        - name: page
+          in: query
+          schema:
+            type: string
+            example: '1'
+        - name: limit
+          in: query
+          schema:
+            type: string
+            example: '10'
+      responses:
+        '200':
+          description: Get wedding images
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '1126'
+            Date:
+              schema:
+                type: string
+                example: Thu, 01 Jun 2023 05:44:27 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"466-tNv1SNtB6cuxJH2yZW7lrDnlA34"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: Wedding images fetched successfully
+                  success:
+                    type: boolean
+                    example: true
+  /weddings/upload-image:
+    post:
+      tags:
+        - 🔄 General
+      summary: Upload wedding
+      description: >-
+        The API endpoint enables users to upload weddings.
+      operationId: uploadwedding
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: jame john
+                email:
+                  type: string
+                  example: abc@gmail.com
+                image:
+                  description: File
+                  type: string
+                  format: binary
+                caption:
+                  type: string
+                  example: hello world
+      responses:
+        '200':
+          description: Upload wedding
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '910'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:45:46 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"38e-+vTTKQiTCppZaCs9tEWJWWsmzZI"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '490'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '572'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: wedding uploaded successfully
+  /weddings/upload-images:
+    post:
+      tags:
+        - 🔄 General
+      summary: Upload wedding images
+      description: >-
+        The API endpoint enables users to upload wedding images.
+      operationId: uploadweddingImages
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: jame john
+                email:
+                  type: string
+                  example: abc@gmail.com
+                images:
+                  type: array
+                  items:
+                    description: File
+                    type: string
+                    format: binary
+                caption:
+                  type: string
+                  example: hello world
+      responses:
+        '200':
+          description: Upload wedding images
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '910'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:45:46 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"38e-+vTTKQiTCppZaCs9tEWJWWsmzZI"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '490'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '572'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: wedding images uploaded successfully    
   tags:
     - name: 🔐 Authentication
       description: >-
